<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Povijest">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/naslovna"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="Vinkovci"
            android:src="@mipmap/sopot"
            />

        <TextView
            android:id="@+id/prapovijest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prapovijest"
            android:layout_below="@+id/naslovna"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="3dp"/>
        <TextView
            android:id="@+id/opisprapovijest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prapovijestopis"
            android:layout_below="@id/prapovijest"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            />
        <TextView
            android:id="@+id/antika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antika"
            android:layout_below="@+id/opisprapovijest"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"/>

        <ImageView
            android:id="@+id/srebro"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_below="@+id/antika"
            android:layout_marginTop="0dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:contentDescription="Srebro"
            android:src="@mipmap/srebro" />
        <TextView
            android:id="@+id/opisantika1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antikaopis1"
            android:layout_toEndOf="@+id/srebro"
            android:layout_below="@id/antika"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            />
        <TextView
            android:id="@+id/opisantika2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antikaopis2"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_below="@id/srebro"
            />

        <TextView
            android:id="@+id/srednjivijek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srednjivinek"
            android:layout_below="@+id/opisantika2"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/meraja"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_below="@+id/srednjivijek"
            android:layout_marginTop="0dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:contentDescription="Meraja"
            android:src="@mipmap/meraja" />
        <TextView
            android:id="@+id/opissrednjivijek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srednjivijekopis1"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_toEndOf="@+id/meraja"
            android:layout_below="@id/srednjivijek"
            />
        <TextView
            android:id="@+id/opissrednjivijek2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srednjivijekopis2"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_below="@id/opissrednjivijek1"
            />
        <TextView
            android:id="@+id/turci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turska"
            android:layout_below="@+id/opissrednjivijek2"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/opisturska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turskaopis"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_below="@id/turci"
            />
        <TextView
            android:id="@+id/dvadeseto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dvadesetostoljece"
            android:layout_below="@+id/opisturska"
            android:textSize="20sp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/rat"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:contentDescription="Vinkovci"
            android:layout_below="@id/dvadeseto"
            android:src="@mipmap/rat"
            />
        <TextView
            android:id="@+id/opisdvadeseto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dvadesetoopis"
            android:layout_below="@id/rat"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            />
        </RelativeLayout>
</ScrollView>